# MOF_Prediction_Tool

./: .gitignore  CMakeLists.txt  README.md
data/: mof_realistic_120.csv  mof_sample_clean.csv  mof_sample_dirty.csv  mof_stress_145.csv
include/: evaluation.h  feature_engineering.h  modeling.h  preprocessing.h  utils.h
notebooks/: exploratory_analysis.ipynb
src/: evaluation.cpp  feature_engineering.cpp  main.cpp  modeling.cpp  preprocessing.cpp  utils.cpp
tests/: manual_pipeline_test.cpp  test_evaluation.cpp  test_feature_engineering.cpp  test_modeling.cpp  test_preprocessing.cpp
